# mai_python

./: .env.example  README.md  Taskfile.yaml  bot.py  docker-compose.yml
app/: handlers.py  keyboards.py  models.py  services.py  storage.py
docker/: docker-compose.infra.yml  recs.Dockerfile  tg.Dockerfile
src/recs/: Taskfile.yaml  poetry.toml  pyproject.toml
src/recs/.configs/: dev.yaml
src/recs/db/postgres/: .env.example  __init__.py  migrate.py
src/recs/db/postgres/migrations/: env.py  script.py.mako
src/recs/db/postgres/migrations/versions/: 0001_init_places_ugc.py  __init__.py
src/recs/db/qdrant/: migrate.py
src/recs/db/qdrant/migrations/: __init__.py
src/recs/db/qdrant/migrations/versions/: 0001_init_places_collection.py  __init__.py
src/recs/lib/: __init__.py
src/recs/lib/application/: __init__.py
src/recs/lib/application/common/: uow.py
src/recs/lib/application/dto/: __init__.py  place_dto.py
src/recs/lib/application/gateways/: __init__.py  place_repository.py  qdrant_place_repository.py  role_repository.py  ugc_repository.py  user_repository.py
src/recs/lib/application/interactors/: __init__.py  place_interactor.py
src/recs/lib/application/services/: __init__.py  place_service.py
src/recs/lib/domain/: __init__.py
src/recs/lib/domain/entities/: __init__.py  place.py  role.py  ugc.py  user.py  user_rating.py
src/recs/lib/domain/enums/: __init__.py  role_name.py  ugc_kind.py
src/recs/lib/domain/value_objects/: __init__.py  coordinates.py  email.py  osm_id.py  place_id.py  rating_score.py  role_id.py  user_id.py  username.py
src/recs/lib/infra/: __init__.py
src/recs/lib/infra/db/: __init__.py  uow.py
src/recs/lib/infra/db/orm_models/: __init__.py  base.py  place.py  role.py  ugc.py  user.py  user_role.py
src/recs/lib/infra/repositories/: __init__.py  place_repository.py  qdrant_place_repository.py  role_repository.py  ugc_repository.py  user_repository.py
src/recs/lib/main/: __init__.py  app.py  settings.py
src/recs/lib/main/ioc/: __init__.py  di.py  providers.py
src/recs/lib/present/: __init__.py
src/recs/lib/present/api/: __init__.py  deps.py
src/recs/lib/present/api/v1/: __init__.py
src/recs/lib/present/api/v1/routers/: __init__.py  place.py
src/recs/lib/present/api/v1/schemas/: __init__.py  place.py
src/recs/lib/utils/: logging.py  settings.py
src/recs/lib/utils/models_utils/: __init__.py  json.py  schema.py
src/recs/tests/domain/: __init__.py
src/recs/tests/domain/entities/: __init__.py  test_user.py  test_user_rating.py
src/recs/tests/domain/enums/: __init__.py  test_role_name.py
src/recs/tests/domain/value_objects/: __init__.py  test_place_id.py  test_rating_score.py  test_user_id.py
tg/: .env  .env.example  README.md  bot.py  requirements.txt
tg/app/: api_client.py  config.py  handlers.py  models.py  services.py  states.py  storage.py
